--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,31 @@
 {
-    "compilerOptions": {
-      "outDir": "lib/esm",
-      "module": "esnext",
-      "target": "es5",
-      "lib": ["es6", "dom", "es2016", "es2017"],
-      "jsx": "react",
-      "declaration": true,
-      "moduleResolution": "node",
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
-      "esModuleInterop": true,
-      "noImplicitReturns": true,
-      "noImplicitThis": true,
-      "noImplicitAny": true,
-      "strictNullChecks": true,
-      "suppressImplicitAnyIndexErrors": true,
-      "allowSyntheticDefaultImports": true
-    },
-    "include": ["src"],
-    "exclude": ["node_modules", "lib", "src/example"]
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "jsx": "react",
+    "sourceMap": true,
+    "strict": true,
+    "moduleResolution": "node",
+    "outDir": "lib/esm",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "lib": ["es6", "dom", "es2016", "es2017"],
+    "declaration": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "baseUrl": "src",
+    "paths": {
+      "atoms": ["./components/atoms"],
+      "styles": ["./utils/styles"],
+      "types": ["./utils/types"],
+      "interfaces": ["./utils/interfaces"]
+    }
+  },
+  "include": ["src", "./**/*.ts", "./**/*.tsx"],
+  "exclude": ["node_modules", "lib", "src/stories"]
 }
