--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@hudoro/neron",
-  "version": "0.1.1",
+  "version": "0.1.5",
   "description": "Design System For Web Application",
-  "main": "./lib/cjs/index.js",
-  "module": "./lib/esm/index.js",
-  "types": "./lib/esm/index.d.ts",
+  "main": "lib/cjs/index.js",
+  "module": "lib/esm/index.js",
+  "types": "lib/esm/index.d.ts",
   "files": [
-    "./lib/esm/**/*",
-    "./lib/cjs/**/*"
+    "lib/esm/**/*",
+    "lib/cjs/**/*"
   ],
   "author": "Prawito Hudoro",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "url": "https://github.com/hudoro-solusi-digital/neron/issues"
   },
   "scripts": {
-    "build": "yarn build:esm && yarn build:cjs",
+    "build": "npm run build:esm && npm run build:cjs",
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir lib/cjs",
     "storybook": "start-storybook -p 6006",
@@ -30,6 +30,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.0"
+  },
+  "peerDependenciesMeta": {
+    "styled-components": {
+      "autoinstall": true
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
