--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "url": "https://github.com/hudoro-solusi-digital/neron/issues"
   },
   "scripts": {
+    "prettier": "prettier --write \"src/**/*.ts\"",
     "build": "npm run build:esm && npm run build:cjs",
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir lib/cjs",
