--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hudoro/neron",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "description": "Design System For Web Application",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -19,6 +19,7 @@
     "url": "https://github.com/hudoro-solusi-digital/neron/issues"
   },
   "scripts": {
+    "prettier": "prettier --write \"src/**/*.ts\"",
     "build": "npm run build:esm && npm run build:cjs",
     "build:esm": "tsc",
     "build:cjs": "tsc --module commonjs --outDir lib/cjs",
