--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "esModuleInterop": true,
     "lib": ["es6", "dom", "es2016", "es2017"],
     "declaration": true,
+    "isolatedModules": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noImplicitReturns": true,
@@ -19,6 +20,6 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
   },
-  "include": ["src", "./**/*.ts", "./**/*.tsx"],
+  "include": ["src", "./**/*.ts", "./**/*.tsx", "config.d.ts"],
   "exclude": ["node_modules", "lib", "src/stories"]
 }
