--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "outDir": "lib/esm",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "lib": ["es6", "dom", "es2016", "es2017"],
+    "lib": ["es6", "dom", "es2016", "es2017", "DOM.Iterable"],
     "declaration": true,
     "isolatedModules": true,
     "noUnusedLocals": true,
@@ -18,7 +18,7 @@
     "noImplicitThis": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "suppressImplicitAnyIndexErrors": true,
+    "suppressImplicitAnyIndexErrors": true
   },
   "include": ["src", "./**/*.ts", "./**/*.tsx", "config.d.ts"],
   "exclude": ["node_modules", "lib", "src/stories"]
